--- a/server-files/public/style.css
+++ b/server-files/public/style.css
@@ -1,7 +1,7 @@
 #jumbo {
   background-image: url(https://ak2.picdn.net/shutterstock/videos/19537192/thumb/1.jpg);
   background-size: cover;
-  height: 100vh;
+  height: 100%;
 }
 
 #notes {
